# mlx-pyinf

./: .gitignore  Dockerfile  README.md  app.py  conf.yaml  config.json  fly.toml  main.py  mlx.toml  pyproject.toml  tests.yml  tracing.py  vals.yml
src/: experiment.py  model.py  service.py  tools.py
src/lib/: base_classes.py
src/mnist/: inference.py  model.py
tests/: test_service.py
